test/pass/InstanceExport/P.curry
module InstanceExport.P (U (U)) where

import InstanceExport.N
