test/fail/CyclicImports/B.curry
module CyclicImports.B where

import CyclicImports.A
